Clean up reschedule tests
Co-authored-by: tmseidel <192797+tmseidel@users.noreply.github.com>